<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="111dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/playerTitleView"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="40dp"
                android:text="@string/playerTitle"
                android:textAlignment="center"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/enderDragonCheckbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/playerTitle"
                tools:visibility="visible" />

            <Switch
                android:id="@+id/hardcoreSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:minHeight="48dp"
                android:text="@string/hardcoreSwitch"
                app:layout_constraintBottom_toTopOf="@+id/spinnerSelect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterGroup" />

            <Spinner
                android:id="@+id/spinnerSelect"
                android:layout_width="168dp"
                android:layout_height="48dp"
                android:layout_marginBottom="224dp"
                android:entries="@array/spinnerArrayValues"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hardcoreSwitch" />

            <CheckBox
                android:id="@+id/witherCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/witherTextBox"
                app:layout_constraintBaseline_toBaselineOf="@+id/enderDragonCheckbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/enderDragonCheckbox" />

            <CheckBox
                android:id="@+id/enderDragonCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="13dp"
                android:text="@string/enderDragonTextBox"
                app:layout_constraintBottom_toTopOf="@+id/characterGroup"
                app:layout_constraintEnd_toStartOf="@+id/witherCheckBox"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerTitleView" />

            <RadioGroup
                android:id="@+id/characterGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/hardcoreSwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enderDragonCheckbox">

                <RadioButton
                    android:id="@+id/steveRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steveRadio" />

                <RadioButton
                    android:id="@+id/alexRadioButton"
                    android:layout_width="62dp"
                    android:layout_height="48dp"
                    android:text="@string/alexRadio" />
            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="determineTitle"
                android:text="@string/buttonLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSelect" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>